--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
-        <li><a href="recipes/sinigang.html">Pork Sinigang</a></li>
+        <li><a href="recipes/fried-chicken/friedchicken.html">Fried Chicken</a></li>
+        <li><a href="recipes/pork-sinigang/sinigang.html">Pork Sinigang</a></li>
     </ul>
 </body>
 </html>
