--- a/recipes/fried-chicken/friedchicken.html
+++ b/recipes/fried-chicken/friedchicken.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pork Sinigang</title>
+    <title>Fried Chicken</title>
+    <link rel="stylesheet" href="friedchicken-style.css">
 </head>
 <body>
-    <h1>Fried Chicken</h1>
-    <img src="fried-chicken.jpg" alt="fried chicken">
-    <h4>A delicious fried chicken, ready to serve!</h4>
+    <h1 class="dish-name">Fried Chicken</h1>
+    <div class="picture">
+        <img src="fried-chicken.jpg" alt="fried chicken">
+    </div>
+    <h4 class="img-description">A delicious fried chicken, ready to serve!</h4>
     <p>Bring your family together and enjoy a new recipe for fried chicken.
         This flavorful dish will make your day so great!
     </p>
