--- a/recipes/pork-sinigang/sinigang.html
+++ b/recipes/pork-sinigang/sinigang.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pork Sinigang</title>
+    <link rel="stylesheet" href="sinigang-style.css">
 </head>
 <body>
-    <h1>Sinigang na Baboy</h1>
-    <img src="pig.png" alt="pig">
-    <h4>A classic Filipino Dish everyone in the family surely loves!</h4>
+    <h1 class="dish-name">Sinigang na Baboy</h1>
+    <div class="picture">
+        <img src="pig.png" alt="pig">
+    </div>
+    <h4 class="img-description">A classic Filipino Dish everyone in the family surely loves!</h4>
     <h2>Ingredients</h2>
     <ul>
         <li>2 lbs. pork belly sliced into cubes</li>
