--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="headline">Odin Recipes</h1>
+    <p class="about">List of my favorite recipes of all time!</p>
     <ul>
         <li><a href="recipes/fried-chicken/friedchicken.html">Fried Chicken</a></li>
         <li><a href="recipes/pork-sinigang/sinigang.html">Pork Sinigang</a></li>
